; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/data/extr_dname.c_query_dname_tolower.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/data/extr_dname.c_query_dname_tolower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @query_dname_tolower(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  %4 = load i64*, i64** %2, align 8
  %5 = load i64, i64* %4, align 8
  store i64 %5, i64* %3, align 8
  br label %6

6:                                                ; preds = %24, %1
  %7 = load i64, i64* %3, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %27

9:                                                ; preds = %6
  %10 = load i64*, i64** %2, align 8
  %11 = getelementptr inbounds i64, i64* %10, i32 1
  store i64* %11, i64** %2, align 8
  br label %12

12:                                               ; preds = %16, %9
  %13 = load i64, i64* %3, align 8
  %14 = add nsw i64 %13, -1
  store i64 %14, i64* %3, align 8
  %15 = icmp ne i64 %13, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %12
  %17 = load i64*, i64** %2, align 8
  %18 = load i64, i64* %17, align 8
  %19 = trunc i64 %18 to i8
  %20 = call i64 @tolower(i8 zeroext %19)
  %21 = load i64*, i64** %2, align 8
  store i64 %20, i64* %21, align 8
  %22 = load i64*, i64** %2, align 8
  %23 = getelementptr inbounds i64, i64* %22, i32 1
  store i64* %23, i64** %2, align 8
  br label %12

24:                                               ; preds = %12
  %25 = load i64*, i64** %2, align 8
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %3, align 8
  br label %6

27:                                               ; preds = %6
  ret void
}

declare dso_local i64 @tolower(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
